tests/miz/pass/types/pass_type_elaboration_chained_local_object_mode_reserved_variable_membership_001.miz
definition
  mode BaseObjectModeMembershipDef: BaseObjectModeMembership is object;
end;

definition
  mode ChainObjectModeMembershipDef: ChainObjectModeMembership is BaseObjectModeMembership;
end;

reserve x for ChainObjectModeMembership;
reserve y for set;
theorem ChainedLocalObjectModeReservedVariableMembershipPayloadBoundary: x in y;
