tests/miz/fail/types/fail_type_elaboration_mixed_attributed_local_mode_structure_rhs_expansion_gap_001.miz
definition
  let x be set;
  attr MarkedDef: x is marked means thesis;
end;

definition
  struct LocalStruct where
    field carrier -> set;
  end;
end;

definition
  mode StructModeDef: StructMode is LocalStruct;
end;

reserve x for StructMode;
reserve y for marked StructMode;
